--- a/plugin.xml
+++ b/plugin.xml
@@ -26,7 +26,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     <description>Cordova File Plugin</description>
     <license>Apache 2.0</license>
     <keywords>cordova,file</keywords>
-    <repo>https://git-wip-us.apache.org/repos/asf/cordova-plugin-file.git</repo>
+    <repo>https://github.com/shashikantkumar88/xpointers-windowsphone-cordova-plugin-file-master.git</repo>
     <issue>https://issues.apache.org/jira/browse/CB/component/12320651</issue>
 
     <js-module src="www/DirectoryEntry.js" name="DirectoryEntry">
